# hidutil-wrapper

./: Cargo.toml  license.txt  readme.md
src/: main.rs
