[package]
name = "hidutil-wrapper"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "readme.md"
description = "A small hidutil wrapper to exchange tab and capslock keys"
keywords = ["hidutil", "keyboard"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
