[package]
name = "hidutil-wrapper"
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "readme.md"
description = "A small hidutil wrapper to exchange tab and capslock keys"
keywords = ["hidutil", "keyboard"]
repository = "https://github.com/yguenduez/hidutil-wrapper"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
